Added 01 Find Complement Subsequence to string.ipynb

--- a/notebooks/strings.ipynb
+++ b/notebooks/strings.ipynb
@@ -189,6 +189,65 @@
     ".Select(s => new { Source = s, Final = FindLongestPalindrome(s).ToString() })\n",
     ".DisplayTable()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 01 Find Complement Subsequence\n",
+    "### Description\n",
+    "Given a `string s` and `string t`, `t` is a subsequence of `s` if the words of `t` appear in `s` in order, though not necessarily contiguously.\n",
+    "\n",
+    "Assume `t` will be a subsequence of `s` and find the subsequence of `s` that is not in `t`.\n",
+    "\n",
+    "### Solution\n",
+    "The general idea is to iterate through `s` and only move up `t` when it matches `s`, recording words in `s` that don't match `t`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "definitely not language. Its mix of dynamic types and lack of explicit static types obscure the shape and APIs of objects.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "string s = \"Python is definitely not an easy to learn powerful programming language. Its mix of dynamic types and lack of explicit static types obscure the shape and APIs of objects.\";\n",
+    "string t = \"Python is an easy to learn powerful programming language\";\n",
+    "\n",
+    "var sWords = s.Split(' ');\n",
+    "var tWords = t.Split(' ');\n",
+    "var missing = new List<string>();\n",
+    "\n",
+    "int sIndex, tIndex = 0;\n",
+    "\n",
+    "// get the difference according to t\n",
+    "for (sIndex = 0; sIndex < sWords.Length; sIndex++)\n",
+    "{\n",
+    "    if (sWords[sIndex] == tWords.ElementAtOrDefault(tIndex))\n",
+    "    {\n",
+    "        tIndex++;\n",
+    "        continue;\n",
+    "    }\n",
+    "\n",
+    "    missing.Add(sWords[sIndex]);\n",
+    "}\n",
+    "\n",
+    "Console.WriteLine(string.Join(\" \", missing));"
+   ]
   }
  ],
  "metadata": {
