--- a/notebooks/math.ipynb
+++ b/notebooks/math.ipynb
@@ -358,7 +358,7 @@
     "\n",
     "The goal is to get the recurrence into a \"generalized solution\", which is a linear equation that is defined in terms of roots of $r$ of the recurrence's \"characteristic equation\" and the base cases of the recurrence.\n",
     "\n",
-    "To simplify that sentence, we'll break it into two parts:\n",
+    "To simplify that sentence, we'll break it into three parts:\n",
     "1. find base cases of recurrence\n",
     "2. get characteristic equation\n",
     "3. get generalized solution"
