Added 02 Compute Standard Deviation to math.ipynb

--- a/notebooks/math.ipynb
+++ b/notebooks/math.ipynb
@@ -520,6 +520,95 @@
     "\n",
     "characteristicFib 13"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02 Compute Standard Deviation\n",
+    "### Description\n",
+    "Assuming a population and not a sample, taking the standard deviation can be done with the following formula:\n",
+    "\n",
+    "$$\\sigma = \\sqrt{\\frac{1}{N}\\sum_{i=1}^{N}(x_i - \\mu)^2}$$\n",
+    "\n",
+    "The SD measures \"spread\" or \"variation\" in a dataset. I wish I understood the SD down to the proof level so I could explain why it works in simpler terms, but I can understand what it means to me (because it's easy to forget what the symbols mean), even if that isn't 100% correct.\n",
+    "\n",
+    "Variance is the average of the squared differences of every point from the dataset average. This is the inside of the square root in the formula.\n",
+    "\n",
+    "This sort of makes sense, but why do we square the differences? I don't know, but I can give two reasons I think this is the case:\n",
+    "1. if we don't square the differences, we get the average of the differences of every point from the dataset average, which is just 0, because both of these calculations calcuate \"center\"\n",
+    "2. standard deviation calculates \"deviations\", and if we don't square the differences, then positive and negative deviations will \"cancel each other out\" when we calculate the average, when we really want deviations (in both directions) to result in a higher SD\n",
+    "\n",
+    "Why do we take the square root of the variance? Well, because we squared the differences, of course! Another \"non-answer\" to the question, yes, but it has that \"feel right\" element to it.\n",
+    "\n",
+    "### Solution\n",
+    "Another great problem for F#!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>1.4142135623730951</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let collection = [1..5] |> List.map double //(fun n -> Random.Shared.NextDouble())\n",
+    "let average = collection |> Seq.average\n",
+    "let variance = collection |> List.map (fun n -> (n - average) ** 2.0) |> Seq.average\n",
+    "let sigma = variance ** 0.5\n",
+    "\n",
+    "sigma"
+   ]
   }
  ],
  "metadata": {
