Added 02 Is String a Palindrome to strings.ipynb

--- a/notebooks/strings.ipynb
+++ b/notebooks/strings.ipynb
@@ -248,6 +248,191 @@
     "\n",
     "Console.WriteLine(string.Join(\" \", missing));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02 Is String a Palindrome\n",
+    "Classic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This solution is tail recursive but doesn't require an accumulator because no additional state needs to be stored at each step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/csv": [
+       "racecar,racecars\r\n",
+       "True,False\r\n"
+      ],
+      "text/html": [
+       "<table><thead><tr><td><span>racecar</span></td><td><span>racecars</span></td></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>True</pre></div></td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#nowarn \"3391\"\n",
+    "\n",
+    "let slice (span : ReadOnlySpan<char>) = span.Slice(1, (span.Length - 2))\n",
+    "\n",
+    "[<TailCall>]\n",
+    "let rec palindrome (span : ReadOnlySpan<char>) =\n",
+    "    match span.Length with\n",
+    "    | 0 -> true\n",
+    "    | 1 -> true\n",
+    "    | _ ->\n",
+    "        if span[0] = span[span.Length - 1] then palindrome (slice span) else false\n",
+    "\n",
+    "[{| racecar = palindrome \"racecar\"; racecars = palindrome \"racecars\" |}]\n",
+    "    |> DisplayExtensions.DisplayTable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also write it iteratively. I really like this one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/csv": [
+       "racecar,racecars\r\n",
+       "True,False\r\n"
+      ],
+      "text/html": [
+       "<table><thead><tr><td><span>racecar</span></td><td><span>racecars</span></td></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>True</pre></div></td><td><div class=\"dni-plaintext\"><pre>False</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let iterPalindrome (str : string) =\n",
+    "    let mutable i = 0\n",
+    "    while str[i] = str[str.Length - i - 1] && i < str.Length / 2 do\n",
+    "        i <- i + 1\n",
+    "    i = str.Length / 2\n",
+    "\n",
+    "[{| racecar = iterPalindrome \"racecar\"; racecars = iterPalindrome \"racecars\" |}]\n",
+    "    |> DisplayExtensions.DisplayTable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I really only put these solutions here because I wanted to clear a file off my Desktop from two months ago. I see that I was experimenting with a solution involving [Active Patterns](https://learn.microsoft.com/en-us/dotnet/fsharp/language-reference/active-patterns) but I never finished it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
